<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cobra iRadar Notifier</string>
    <string name="settings">Settings</string>
    <string name="prefKeyAlertLevelSetFlag">alertLevelSetFlag</string>
    <string name="prefKeyAlertLevel">alertLevel</string>
    <string name="prefKeyScreenLogScrollBackLimit">prefKeyScreenLogScrollBackLimit</string>
    <string name="prefKeyScreenRefreshFrequency">prefKeyScreenRefreshFrequency</string>
    <string name="prefKeyFakeAlertDetectionRadius">prefKeyFakeAlertDetectionRadius</string>
    <string name="prefKeyFakeAlertDetection">prefKeyFakeAlertDetection</string>
    <string name="prefKeyLogFileName">prefKeyLogFileName</string>
    <string name="prefKeyScanForDevice">prefScanDevice</string>
    <string name="prefValScanForDevice">Scan for radar device</string>
    <string name="prefSumScanForDevice">Attempt to reconnect to radar device</string>
    <string name="prefKeyScanInterval"></string>
    <string name="prefValScanInterval">Interval in seconds to scan</string>
    <string name="prefDlgTitleScanInterval">Scan Interval</string>
    <string name="prefDlgTxtScanInterval">Scan Interval in seconds</string>
    <string name="prefKeySpeakEvents">perfKeySpeakEvents</string>
    <string name="prefValSpeakEvents">Notify on radar connectivity</string>
    <string name="prefKeyTextDeviceConnected">prefKeyTextDeviceConnected</string>
    <string name="prefValTextDeviceConnected">Text to speak on connection</string>
	<string name="prefValTextDeviceWorking">Text to speak while connected</string>
	<string name="prefKeyTextDeviceWorking">prefKeyTextDeviceWorking</string>
	<string name="prefValTextDeviceWorkingInterval">Interval to notify</string>
	<string name="prefKeyTextDeviceWorkingInterval">prefKeyTextDeviceWorkingInterval</string>
	<string name="prefDlgTextDeviceWorkingInterval">How often (in seconds) to notify that device is connected</string>
	<string name="prefKeyTextDeviceDisconnect">prefKeyTextDeviceDisconnect</string>
	<string name="prefValTextDeviceDisconnect">Text to speak on disconnection</string>
	<string name="done">Done</string>
	<string name="crashNotificationText">Cobra iRadar application has crashed. Developer would greatly appreciate if you agree to send a crash report which could help track down the cause of the crash. All you have to do is (optionally) enter your comments, and click OK button. The report is shared as email, so please choose your email application in the following popup and send to rootkit007@gmail.com. Thank you!</string>
	<string name="crashNotificationTitle">Cobra iRadar Has Crashed!</string>
	<string name="quit">Quit</string>
	<string name="prefKeyStartScanOnBoot">prefKeyStartScanOnBoot</string>
	<string name="prefValStartScanOnBoot">Start Scanning On Boot</string>
	<string name="prefSumStartScanOnBoot">Will start scanning after device is restarted</string>
	<string name="prefCatAudio">Audible Alerts</string>
	<string name="prefCatVisibleNotifications">Notifications</string>
	<string name="prefKeyOngoingNotificationWhileConnected">prefKeyOngoingNotificationWhileConnected</string>
	<string name="prefValOngoingNotificationWhileConnected">Notification while connected</string>
	<string name="prefSumOngoingNotificationWhileConnected">Shows ongoing notification when radar device is connected</string>
	<string name="prefKeyOngoingNotificationWhileScanning">prefKeyOngoingNotificationWhileScanning</string>
	<string name="prefValOngoingNotificationWhileScanning">Notification while scanning</string>
	<string name="prefSumOngoingNotificationWhileScanning">Shows ongoing notification if scheduled scan for radar devices is active</string>
	<string name="prefKeyScanOnlyInCarMode">prefKeyScanOnlyInCarMode</string>
	<string name="prefValScanOnlyInCarMode">Only scan if in car mode</string>
	<string name="prefKeyScanOnlyInDrivingMode">prefKeyScanOnlyInDrivingMode</string>
	<string name="prefValScanOnlyInDrivingMode">Only scan if in driving mode</string>
	<string name="prefSumScanOnlyInDrivingMode">Attempts to detect if you are driving and activate scan only then. This may or may not work on your device</string>
	<string name="prefCatThreats">Threat Management</string>
	<string name="prefKeyLogThreats">prefKeyLogThreats</string>
	<string name="prefValLogThreats">Log threats</string>
	<string name="prefSumLogThreats">Keep encountered threats in database</string>
	<string name="prefKeyLogThreatsLimitNum">prefKeyLogThreatsLimitNum</string>
	<string name="prefValLogThreatsLimitNum">Limit number of log entries</string>
	<string name="prefSumLogThreatsLimitNum">Will periodically purge old threats from history. This can speed up the processing of alerts, but will also affect how false alert autodetection works - more history means better false alert detection</string>
	<string name="prefKeyLogThreatsLimitNumVal">prefKeyLogThreatsLimitNumVal</string>
	<string name="prefValLogThreatsLimitNumVal">Max Number of threats to keep</string>
	<string name="prefKeyKeepScreenOnInForeground">prefKeyKeepScreenOnInForeground</string>
	<string name="prefValKeepScreenOnInForeground">Keep screen on</string>
	<string name="prefKeyTurnScreenOnForAlerts">prefKeyTurnScreenOnForAlerts</string>
	<string name="prefValTurnScreenOnForAlerts">Turn Screen On</string>
	<string name="prefKeyLogLocation">prefKeyLogLocation</string>
	<string name="prefValLogLocation">Log threat location</string>
	<string name="prefSumLogLocation">Records GPS location of each threat. This activates GPS when radar device connects, and will reduce battery life</string>
	<string name="prefKeySpeakNotDuringCalls">prefKeySpeakNotDuringCalls</string>
	<string name="prefValSpeakNotDuringCalls">Dont speak during calls</string>
	<string name="prefSumSpeakNotDuringCalls">Dont speak notifications when call is active</string>
	<string name="prefKeyAlertLevelBT">prefKeyAlertLevelBT</string>
	<string name="prefKeyAlertLevelHeadSet">prefKeyAlertLevelHeadSet</string>
	<string name="prefValFakeAlertDetection">Auto-detect fake alerts</string>
	<string name="prefSumFakeAlertDetection">Learn locations/frequencies of frequent alerts, and dont display them anymore</string>
	<string name="prefValFakeAlertDetectionRadius">Proximity threshold for fake alerts</string>
	<string name="prefSumFakeAlertDetectionRadius">Proximity (km) to previous alerts</string>
	<string name="menuItemTestAlertTitle">Test Alert</string>
	<string name="prefSumAlertLevelSetFlag">Set minimum alerts volume. Will restore original volume after alert(s) clear</string>
	<string name="prefKeyUnits">prefKeyUnits</string>
	<string name="prefValUnits">Units to display</string>
	<string name="prefKeyFakeAlertDetectionOccurenceThreshold">prefKeyFakeAlertDetectionOccurenceThreshold</string>
	<string name="prefValFakeAlertDetectionOccurenceThreshold">Number of occurences threshold</string>
	<string name="prefSumFakeAlertDetectionOccurenceThreshold">How many occurences of a threat with same frequency and location before its classified as false</string>
	<string name="prefKeyThreatShowMinSpeed">prefKeyThreatShowMinSpeed</string>
	<string name="prefValThreatShowMinSpeed">Show Threats only when speed above </string>
	<string name="prefSumThreatShowMinSpeed">Only alert when speed is above threshold</string>
	<string name="prefDlgTextThreatShowMinSpeed">"Will not show any alerts unless speed is above entered value (km/h) "</string>
	<string name="log">Log</string>
	<string name="aboutTxtAbout">Radar Notifier Application\nVisit https://github.com/rootkit007/cobra-iradar-notifier to submit bug report or get source code\nQuestions? Email rootkit007@gmail.com</string>
	<string name="aboutTxtCopyright">Icon Image Credit: <a href="http://vector.me/browse/339809/radar" title="Radar" target="_blank">Radar</a> from <a href="http://vector.me/" title="Vector.me" target="_blank">Vector.me</a> (by mola)</string>
	<string name="itemTextAbout">About</string>
	<string name="ok">OK</string>
	<string name="prefSumKeepScreenOnInForeground">Will keep screen on while app is running in foreground</string>
	<string name="prefSumTurnScreenOnForAlerts">Will turn screen on and disable keyguard when alerts occur</string>
	<string name="prefKeyTTSVolumeOffset">prefKeyTTSVolumeOffset</string>
	<string name="prefValTTSVolumeOffset">Change minimum volume for TTS notifications</string>
	<string name="prefSumTTSVolumeOffset">Increase or decrease TTS min volume relative to alerts volume</string>
	<string name="prefKeyAutoMuteDelay">prefKeyAutoMuteDelay</string>
	<string name="prefValAutoMuteDelay">Auto Mute</string>
	<string name="prefSumAutoMuteDelay">After how many seconds to reduce alert volume</string>
	<string name="prefValAlertLevelSetFlag">Set Volume for Alerts</string>
	<string name="prefKeyAutoMuteImmediatelyDuringCalls">prefKeyAutoMuteImmediatelyDuringCalls</string>
	<string name="prefValAutoMuteImmediatelyDuringCalls">Automute immediately during calls</string>
	<string name="prefSumAutoMuteImmediatelyDuringCalls">Will automute immediately (without delay) if call is active</string>
	<string name="ui_mode">Dock Mode</string>
	<string name="activity">Activity</string>
	<string name="speed">Speed</string>
	<string name="reconnect">Reconnect</string>
	<string name="voltage">Voltage</string>
	<string name="status">Status</string>
	<string name="prefSumCatAudio">Set minimum alert levels for audible alerts</string>
	<string name="prefSumCatVisibleNotifications">Ongoing notifications in your status bar. Also contains settings whether to turn screen on for alerts</string>
	<string name="prefCatScanning">Scanning for iRadar device</string>
	<string name="prefSumCatScanning">Cobra iRadar device does not connect to the phone. Instead phone must initiate connection. Contains settings to govern when phone will attempt to connect.</string>
	<string name="prefCatConnectivityNotification">Connectivity Notifications</string>
	<string name="prefSumCatConnectivityNotification">Settings to control audible notifications about iRadar device connectivity status</string>
	<string name="prefSumCatThreats">Settings to control threat handling</string>
	<string name="prefKeyShowFakeHiddenThreats">prefKeyShowFakeHiddenThreats</string>
	<string name="prefValShowFakeHiddenThreats">Show visible alerts for false/hidden threats</string>
	<string name="prefSumShowFakeHiddenThreats">Will display visible (not audible) alerts for any threats that are hidden (speed below threshold) or determined as fake. Hidden alerts will be blue, false alerts green</string>
	<string name="prefSumScanOnlyInCarMode">Will only attempt to connect when phone is connected to car dock</string>
	<string name="prefCatLocation">Location awareness</string>
	<string name="prefCatLocationSum">Query online services about current location (speed limit, street name)</string>
	<string name="prefKeyLookupMaxSpeed">prefKeyLookupMaxSpeed</string>
	<string name="prefValLookupMaxSpeed">Lookup speed limit</string>
	<string name="prefSumLookupMaxSpeed">Will try to determine current speed limit. This depends on online services data availability, and is not guaranteed. This will enable GPS when radar device is coonected and result in reduced battery life!</string>
	<string name="locationInfo">Road</string>
	<string name="speedLimit">Speed Limit</string>
	<string name="prefKeyLookupWhenCarMode">prefKeyLookupWhenCarMode</string>
	<string name="prefKeyLookupWhenDriving">prefKeyLookupWhenDriving</string>
	<string name="prefSumLookupWhenCarMode">Activate only when in car mode</string>
	<string name="prefSumLookupWhenDriving">Activate only when driving activity detected</string>
	<string name="prefValLookupWhenCarMode">Only in car mode</string>
	<string name="prefValLookupWhenDriving">Only when driving</string>
	<string name="prefKeyWarnOverSpeed">prefKeyWarnOverSpeed</string>
</resources>