<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:id="@+id/layoutIdAbout"
     >
    
    <TextView
        android:id="@+id/aboutIdTextAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:autoLink="all"
	    android:layout_gravity="top|center_horizontal"
        android:text="@string/aboutTxtAbout" />

    <TextView
        android:id="@+id/aboutIdCopyrightLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="10sp"
	    android:text="@string/aboutTxtCopyright"
	    android:layout_below="@id/aboutIdTextAbout"
        android:autoLink="all" />
    
    <Button android:id="@+id/aboutIdButtonOK"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
	    android:layout_below="@id/aboutIdCopyrightLinks"
        android:text="@string/ok"
        />

</RelativeLayout>
